--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Main Content -->
   <main class="flex-grow items-center py-12 text-center px-4">
     <!-- Profile Image -->
-    <img src="/img/me.jpg" alt="" class="w-48 h-48 rounded-full shadow-md mb-6 object-cover m-auto">
+    <img src="img/me.jpg" alt="" class="w-48 h-48 rounded-full shadow-md mb-6 object-cover m-auto">
 
     <!-- Name and Bio -->
     <h2 class="text-3xl font-bold">Rizky Kurnia Antasari</h2>
